--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
-header {
+header, h2 {
   text-align: center;
   font-family: "Chalkduster";
   margin-top: 5%; }
-  header h1 {
+  header h1, h2 h1 {
     margin-bottom: 2%;
     font-size: 5rem; }
 
