--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,4 @@
-header
+header, h2
 	text-align: center
 	font-family: "Chalkduster"
 	margin-top: 5%
@@ -9,3 +9,5 @@ header
 .images
 	text-align: center
 	margin-top: 5%
+
+
